# LuaHook

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  vcpkg.json  vsSetup.ps1
.cache/clangd/index/: chardefs.h.911139683CF28D7E.idx  history.h.2EFED95176EBDC7B.idx  keymaps.h.CB4905ABED0E1C95.idx  lauxlib.h.5AB605163BBD1F97.idx  lua.h.1393143C4747F2B1.idx  luaconf.h.C325EEF70905CE16.idx  lualib.h.23D6F7F9D0E61DA2.idx  main.cpp.7EC676BBF10AE58D.idx  readline.h.28A8E163F85728F8.idx  rlstdc.h.D340AC75D65FB68B.idx  rltypedefs.h.0215E65C8D622A65.idx  tilde.h.3AE0A1B6F95DB775.idx
src/: main.cpp
